<resources>
    <string name="app_name">WeatherApp</string>
    <string name="city_name">St. Paul, Mn</string>
    <string name="current_temp">72</string>
    <string name="feels_like">Feels like 78</string>
    <string name="low_temp">Low 65</string>
    <string name="high_temp">High 80</string>
    <string name="humidity_temp">Humidity 100%</string>
    <string name="pressure_temp">Pressure 1023 hPa</string>
</resources>