<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <TextView
      android:id="@+id/city_name"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/city_name"
      android:textAlignment="center"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/current_temp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/current_temp"
      android:textSize="72sp"
      android:layout_marginStart="24dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/city_name"/>

  <TextView
      android:id="@+id/feels_like"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:text="@string/feels_like"
      android:textAlignment="center"
      android:textSize="14sp"
      android:layout_marginStart="24dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/current_temp"/>

  <TextView
      android:id="@+id/low_temp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:text="@string/low_temp"
      android:textAlignment="center"
      android:textSize="18sp"
      android:layout_marginStart="24dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/feels_like"/>

  <TextView
      android:id="@+id/high_temp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:text="@string/high_temp"
      android:textAlignment="center"
      android:textSize="18sp"
      android:layout_marginStart="24dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/low_temp"/>

  <TextView
      android:id="@+id/humidity_temp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:text="@string/humidity_temp"
      android:textAlignment="center"
      android:textSize="18sp"
      android:layout_marginStart="24dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/high_temp"/>

  <TextView
      android:id="@+id/pressure_temp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:text="@string/pressure_temp"
      android:textAlignment="center"
      android:textSize="18sp"
      android:layout_marginStart="24dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/humidity_temp"/>

  <ImageView
      android:id="@+id/current_condition_icon"
      android:layout_width="72dp"
      android:layout_height="72dp"
      android:src="@drawable/sun_icon"
      android:importantForAccessibility="no"
      android:layout_marginEnd="24dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@id/current_temp"
      app:layout_constraintBottom_toBottomOf="@id/current_temp"/>



</androidx.constraintlayout.widget.ConstraintLayout>